hnsd: improve options parsing. rename `--daemonize`.

--- a/man/hnsd.1
+++ b/man/hnsd.1
@@ -59,7 +59,7 @@ Extra seeds to connect to on P2P network.
 .BI \-l,\ \-\-log\-file\ [\fIfilename\fP]
 Redirect output to a log file.
 .TP
-.BI \-d,\ \-\-daemonize
+.BI \-d,\ \-\-daemon
 Fork and background the process.
 .TP
 .BI \-h,\ \-\-help
